--- a/Victor.Html
+++ b/Victor.Html
@@ -30,4 +30,6 @@
 		<h4>LANGUAGES</h4>
 		<font size="3">English, Hausa, Bini</font>
 	</aside>
+	<a href="https://res.cloudinary.com/spartan1203/image/upload/v1566674344/html_dwkw0p.jpg"> Victor CV in HTML</a>
 </body>
+	</Html5>
