--- a/Victor.Html
+++ b/Victor.Html
@@ -1,35 +1,68 @@
+
 <!Doctype Html>
+<style>
+	body {background-color: pink;
+		font-family: helvetica;
+		}
+	h4{font-family: comic-sans, monospace;}
+
+	#EXPERIENCE{background-color: yellow;
+		width:500px;
+		height: 300px;
+		position: relative;
+		margin:auto;
+		padding: auto;}
+	#EDUCATION{background-color: magenta;
+		width:300px;
+		height: 200px;
+		position: relative;
+		margin-right: 500px;
+		padding: auto;
+		}
+	#ASIDE{background-color: cyan; 
+		width: 300px;
+		height:160px;
+		margin-left: 500px;
+		margin-bottom: 600px;
+		position: relative;
+		margin:auto;}
+</style>
 <Html5>
+	
 <head><title>Task2 for start.ng</title></head>
 <font size="7"> <h3>Victor Elisha</h3></font>
-<body bgcolor="green">
+<body>
+	<div id="EXPERIENCE">
 	<SECTION>
-		<h4>EXPERIENCE</h4>
-			<p><b>Zamfara State Hospital Services Management Board,		<br> </b>Kaura Namoda - <em>Clinical Optometrist</em>		<br><font size="2">NOVEMBER - PRESENT</font></p>
-			<p><b>Rexan Eye and Low Vision Clinic,						<br> </b>Yola - <em>Clinical Optometrist</em>			<br><font size="2">AUGUST 2018 - SEPTEMBER 2018</font></p>
-			<p><b>Adamawa State Primary Healthcare Development Agency,
+		<h4> EXPERIENCE</h4>
+			<p><ul><li><b>Zamfara State Hospital Services Management Board,		<br> </b>Kaura Namoda - <em>Clinical Optometrist</em>		<br><font size="2">NOVEMBER - PRESENT</font></li></p>
+			<p><b><li>Rexan Eye and Low Vision Clinic,						<br> </b>Yola - <em>Clinical Optometrist</em>			<br><font size="2">AUGUST 2018 - SEPTEMBER 2018</font></li></p>
+			<p><li><b>Adamawa State Primary Healthcare Development Agency,
 			<br> </b>Yola - <em>Program Officer</em>
-			<br><font size="2">JANUARY 2018 - AUGUST 2018</font>
-			</p>
-	</SECTION>
+			<br><font size="2">JANUARY 2018 - AUGUST 2018</font></li></ul>
+			</p></div>
+	</SECTION></div>
+	<div id="EDUCATION"> 
 	<SECTION>
 		<h4>EDUCATION</h4>
-			<p><B>University of Benin,</B>Benin-City  -  <em>	Dr. of Optometry</em>
+			<p><ul><li><B>University of Benin, </B>Benin-City  -  <em>	Dr. of Optometry</em>
 				<br>
-				<font size="2">January 2007 - July 2014</font></p>
-			<p><b>Federal Government College,</b>Kaduna - <em>WASSCE</em>
+				<font size="2">January 2007 - July 2014</font></li></p>
+			<p><li><b>Federal Government College, </b>Kaduna - <em>WASSCE</em>
 				<br>
-				<font size="2">September 1998 - June 2004</font>
+				<font size="2">September 1998 - June 2004</font></li>
 			</p>
-	</SECTION>
+	</SECTION></div>
 
-
+	<div id="ASIDE" >
 	<aside>
 		<h4>SKILLS</h4>
-		<font size="3">Microsoft Office Package</font>
+		<li><font size="3">Microsoft Office Package</font>
 		<h4>LANGUAGES</h4>
-		<font size="3">English, Hausa, Bini</font>
+		<li><font size="3">English, Hausa, Bini</font></li>
 	</aside>
-	<a href="https://res.cloudinary.com/spartan1203/image/upload/v1566674344/html_dwkw0p.jpg"> Victor CV in HTML</a>
+	</div?
+	<h4><a href="https://res.cloudinary.com/spartan1203/image/upload/v1566674344/html_dwkw0p.jpg"> Victor CV in HTML</a></h4>
 </body>
+</div>
 	</Html5>
